Refactor README for improved clarity and structure
Updated sections in README.md for clarity and consistency, including installation requirements and database configuration.